Add vim highlight plugin

--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,8 @@ pagination_dir: page
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
 theme: landscape
+plugins:
+- hexo-tag-vimhighlight
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
