--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: The BIM Coder
 subtitle:
 description:
-author: John Doe
+author: Eason Kang
 language:
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://yiskang.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -54,6 +54,14 @@ tag_map:
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 
+# Archives
+# ## 2: Enable pagination
+# ## 1: Disable pagination
+# ## 0: Fully Disable
+archive: 2
+category: 2
+tag: 2
+
 # Pagination
 ## Set per_page to 0 to disable pagination
 per_page: 10
@@ -62,9 +70,9 @@ pagination_dir: page
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: landscape
+theme: pure
 plugins:
-- hexo-tag-vimhighlight
+- Hexo-renderer-jade
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
