--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 13筆記
 subtitle:
 description:
 author: 康益昇
-email:
+email: M9805508@mail.ntust.edu.tw
 language:
 timezone:
 
@@ -68,12 +68,19 @@ tag: 1
 per_page: 10
 pagination_dir: page
 
+# RSS
+feed:
+  type: atom
+  path: atom.xml
+  limit: 10
+
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
 theme: pure
 plugins:
 - Hexo-renderer-jade
+- hexo-generator-feed
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
